--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="vG1tXO_vy5rNwqACTBQfFXSq2jHRMFDNSXTnC1lKKJE" />
     <title>Online Penny Jar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
